<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            style="@style/FontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_count" />

        <EditText
            android:id="@+id/editText_tag_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:focusable="false"
            android:inputType="number"></EditText>

        <Button
            android:id="@+id/button_clear_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_data" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioGroup
            android:id="@+id/RgInventory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/RbInventorySingle"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/rbInventorySingle" />

            <RadioButton
                android:id="@+id/RbInventoryLoop"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:checked="true"
                android:text="@string/rbInventoryLoop" />

        </RadioGroup>

        <Button
            android:id="@+id/button_inventory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/inventory" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:background="@color/color_epc"
            android:gravity="center"
            android:text="@string/epc"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_count"
            android:text="@string/count"
            android:textColor="@color/black" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <ListView
        android:id="@+id/listView_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
